# orion-ed

./: .env  .gitignore  01-subir-minio.sh  02-baixar.sh  03-enviar.sh  04-coletar-repo.sh  05-baixar-pdfs.sh  Dockerfile  app.py  docker-compose.yml  limpar-minio.py  requirements.txt  teste_vetor.py  transformar.py
rag-agno/: docker-compose.yml
rag-agno/agno-rag/: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml
