[project]
name = "rag-agno"
version = "0.1.0"
description = "Agente RAG com Agno"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.18",
    "fastapi>=0.137.2",
    "fastembed>=0.8.0",
    "google-genai>=2.0.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
